@@ -4,24 +4,24 @@ CC      = wcc386
 LINK    = wlink
 RM	= del
 
-CFLAGS  = -zq -wx -bt=os2v2 -i=.. -oneatx -5
+CFLAGS  = -zq -wx -bt=os2v2 -i=..\.. -oneatx -5
 LFLAGS  = system os2v2
 
 OSTYPE=OS2
 UNAME=OS/2
 
 CDEFS=-D$(OSTYPE) -DUNAME="$(UNAME)"
-SRC_DIR=..\src\
+SRC_DIR=..\SRC\
 
 OBJS= log.obj config.obj bsoutil.obj bsopack.obj
 
 all: bsopack
 
-$(OBJS): $(SRC_DIR)*.c
-		$(CC) $(CFLAGS) $(CDEFS) $*.c
+$(OBJS): $(SRC_DIR)\*.c
+		$(CC) $(CFLAGS) $(CDEFS) $(SRC_DIR)\$*.c
 
 bsopack: $(OBJS)
-		$(LINK) $(LFLAGS) FILE log.obj, config.obj, bsoutil.obj, bsopack.obj, ..\smapi\smapiwco.lib, ..\fidoconf\fconfwco.lib NAME bsopack.exe
+		$(LINK) $(LFLAGS) FILE log.obj, config.obj, bsoutil.obj, bsopack.obj, ..\..\smapi\smapiwco.lib, ..\..\fidoconf\fconfwco.lib NAME bsopack.exe
 
 
 .IGNORE
